# peek-plugin-diagram-generic-menu

./: README.rst  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  sonar-project.properties
peek_plugin_diagram_generic_menu/: plugin_package.json
peek_plugin_diagram_generic_menu/_private/server/: ServerEntryHook.py
peek_plugin_docdb_generic_menu/: plugin_package.json
peek_plugin_docdb_generic_menu/_private/admin-app/: docDbGenericMenu.module.ts
peek_plugin_docdb_generic_menu/_private/server/: LogicEntryHook.py
peek_plugin_docdb_generic_menu/_private/storage/: DocDbGenericMenuTuple.py
peek_plugin_generic_diagram_menu/: __init__.py  plugin_package.json
peek_plugin_generic_diagram_menu/_private/: PluginNames.py
peek_plugin_generic_diagram_menu/_private/admin-app/: genericDiagramMenu.component.html  genericDiagramMenu.component.ts  genericDiagramMenu.module.ts
peek_plugin_generic_diagram_menu/_private/agent/: AgentEntryHook.py  AgentToServerRpcCallExample.py  RpcForServer.py
peek_plugin_generic_diagram_menu/_private/alembic/: env.py
peek_plugin_generic_diagram_menu/_private/client/: ClientEntryHook.py  DeviceTupleDataObservableProxy.py  (+1 more)
peek_plugin_generic_diagram_menu/plugin-module/: package.json
peek_plugin_generic_diagram_menu/server/: GenericDiagramMenuApiABC.py
peek_plugin_generic_diagram_menu/tuples/: DoSomethingTuple.py
peek_plugin_object_generic_menu/: plugin_package.json
peek_plugin_object_generic_menu/_private/: PluginNames.py
peek_plugin_object_generic_menu/server/: ObjectGenericMenuApiABC.py
(+72 files in other folders)
